# sicompiler

./: .gitignore  Cargo.toml  README.md
examples/: input.txt  out.txt
src/: args.rs  lib.rs  main.rs  tokenizer.rs  validator.rs
src/config/: default-rep.rep  default-repertorie.txt
src/errors/: error.rs
src/models/: args.rs  init.rs  instruction.rs  mod.rs  program.rs  variable.rs
src/structs/: mod.rs  tokenizer.rs  validator.rs
tests/: sicompiler_tests.rs
tests-files/: test-input.txt  test-out.txt  test-repertoire.rep  test.txt
tests-files/fails-files/: bad-test-input.txt  invalid-file.txt  invalid-repertoire.rep  more-instructions-rep.rep
tests/utils/: bad-test-input.txt  test-input.txt  test-out.txt  test-repertoire.rep
