[package]
name = "sicompiler"
version = "0.1.0"
edition = "2021"
description = "A basic compiler for SiCoMe programs"
readme = "README.md"
repository = "https://github.com/Pacatro/sicompiler.git"
license = "MIT OR Apache-2.0"
authors = ["P4k0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
